--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,3 +1,181 @@
+@article{clausen2014enhancement,
+  title={Enhancement of ultralow frequency wave amplitudes at the plasmapause},
+  author={Clausen, L. B. N. and Glassmeier, K.-H.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={119},
+  number={11},
+  pages={9113--9124},
+  year={2014},
+  month = 11,
+  publisher={Wiley Online Library}
+}
+
+@article{coxon2014magnitude,
+  title={The magnitudes of the regions 1 and 2 Birkeland currents observed by AMPERE and their role in solar wind-magnetosphere-ionosphere coupling},
+  author={Coxon, J. C. and Milan, S. E. and Clausen, L. B. N. and Anderson, B. J. and Korth, H.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={119},
+  number={12},
+  pages={9804--9815},
+  year={2014},
+  month = 11,
+  publisher={Wiley Online Library}
+}
+
+@article{coxon2014superposed,
+  title={A superposed epoch analysis of the regions 1 and 2 Birkeland currents observed by AMPERE during substorms},
+  author={Coxon, J. C. and Milan, S. E. and Clausen, L. B. N. and Anderson, B. J. and Korth, H.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={119},
+  number={12},
+  pages={9834--9846},
+  year={2014},
+  month = 11,
+  publisher={Wiley Online Library}
+}
+
+@article{muzamil2014structure,
+  title={Structure of a reconnection layer poleward of the cusp: Extreme density asymmetry and a guide field},
+  author={Muzamil, F. M. and Farrugia, C. J. and Torbert, R. B. and Pritchett, P. R. and Mozer, F. S. and Scudder, J. D. and Russell, C. T. and Sandholt, P. E. and Denig, W. F and Wilson III, L.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={119},
+  number={9},
+  pages={7343--7362},
+  year={2014},
+  month = 8,
+  publisher={Wiley Online Library}
+}
+
+@article{nishimura2014daynight,
+  title={Day-night coupling by a localized flow channel visualized by polar cap patch propagation},
+  author={Nishimura, Y. and Lyons, L. R. and Zou, Y. and Oksavik, K. and Moen, J. I. and Clausen, L. B. and Donovan, E. F. and Angelopoulos, V. and Shiokawa, K. and Ruohoniemi, J. M. and Nishitani, N. and McWilliams, K. A. and Lester, M.},
+  journal={Geophysical Research Letters},
+  volume={41},
+  number={11},
+  pages={3701--3709},
+  year={2014},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@article{clausen2014thermospheric,
+  title={Thermospheric density perturbations in response to substorms},
+  author={Clausen, L. B. N. and Milan, S. E. and Grocott, A.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={119},
+  number={6},
+  pages={4441--4455},
+  year={2014},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@Article{sandholt2014aspects,
+  title={Aspects of magnetosphere–ionosphere coupling  in sawtooth substorms: a case study},
+  author={Sandholt, P. E. and Farrugia, C. J.},
+  journal={Annales Geophysicae},
+  volume={32},
+  number={10},
+  pages={1277--1291},
+  year={2014},
+  month = 10,
+  publisher={Copernicus GmbH}
+}
+
+@Article{pecseli2014modulational,
+  title={Modulational stability of electron plasma wave spectra},
+  author={Pécseli, H. L.},
+  journal={Journal of Plasma Physics},
+  volume={80},
+  number={5},
+  pages={745--769},
+  year={2014},
+  month = 7,
+  publisher={Cambridge University Press}
+}
+
+@Article{sandholt2014micoupling,
+  title={M&ndash;I coupling across the auroral oval at dusk and midnight: repetitive substorm activity driven by interplanetary coronal mass ejections (CMEs)},
+  author={Sandholt, P. E. and Farrugia, C. J. and Denig, W. F.},
+  journal={Annales Geophysicae},
+  volume={32},
+  number={4},
+  pages={333--351},
+  year={2014},
+  month = 4,
+  publisher={Copernicus GmbH}
+}
+
+@article{tresvig2014design,
+  title={Design of a Communication System for a Nanosatellite Space Weather Mission},
+  author={Johan Ludvig Tresvig and Torfnn Lindem},
+  journal={IEEE Aerospace and Electronic Systems Magazine},
+  volume={29},
+  pages={22--29},
+  year={2014},
+  month = 12,
+  publisher={IEEE}
+}
+
+@article{jin2014scintillationeffects,
+  title={GPS scintillation effects associated with polar cap patches and substorm auroral activity: direct comparison},
+  author={Jin, Yaqi, Moen, J\o{}ran I., and Miloch, Wojciech J.},
+  journal={Journal of Space Weather and Space Climate},
+  volume={4},
+  pages={A23},
+  year={2014},
+  month = 7,
+  publisher={EDP Sciences}
+}
+
+@article{meeren2014GPSscintillation,
+  title={GPS scintillation and irregularities at the front of an ionization tongue in the nightside polar ionosphere},
+  author={van der Meeren, Christer and Oksavik, Kjellmar and Lorentzen, Dag and Moen, Jøran Idar and Romano, Vincenzo},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={119},
+  number={10},
+  pages={8624--8636},
+  year={2014},
+  month = 9,
+  publisher={Wiley Online Library}
+}
+
+@article{spicher2014direct,
+  title={Direct evidence of double-slope power spectra in the high-latitude ionospheric plasma},
+  author={Spicher, A. and Miloch, W. J. and Moen, J. I.},
+  journal={Geophysical Research Letters},
+  volume={41},
+  number={5},
+  pages={1406--1412},
+  year={2014},
+  month = 2,
+  publisher={Wiley Online Library}
+}
+
+@article{zettergren2014GPSauroral,
+  title={Auroral ionospheric F region density cavity formation and evolution: MICA campaign results},
+  author={Zettergren, M. and Lynch, K. and Hampton, D. and Nicolls, M. and Wright, B. and Conde, M. and Moen, J. and Lessard, M. and Miceli, R. and Powell, S.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={119},
+  number={4},
+  pages={3162--3178},
+  year={2014},
+  month = 3,
+  publisher={Wiley Online Library}
+}
+
+@Article{sigernes2014auroral,
+  title={Auroral all-sky camera calibration},
+  author={Sigernes, F. and Holmen, S. E. and Biles, D. and Bj{\o}rklund, H. and Chen, X. and Dyrland, M. and Lorentzen, D. A. and Baddeley, L. and Trondsen, T. and Br\"andstr\"om, U. and Trondsen, E. and Lybekk, B. and Moen, J. and Chernouss, S. and Deehr, C. S.},
+  journal={Geoscientific Instrumentation, Methods and Data Systems},
+  volume={3},
+  number={2},
+  pages={241--245},
+  year={2014},
+  month = 12,
+  publisher={Copernicus GmbH}
+}
+
 @article{mortensen2015oasis,
   title={Oasis: a high-level/high-performance open source Navier--Stokes solver},
   author={Mortensen, Mikael and Valen-Sendstad, Kristian},
@@ -8,6 +186,19 @@
   month = 11,
   publisher={Elsevier}
 }
+
+@Article{garcia2015MF,
+  title={Magnetic field-aligned plasma currents in gravitational fields},
+  author={Garcia, O. E. and Leer, E. and P\'ecseli, H. L. and Trulsen, J. K.},
+  journal={Annales Geophysicae},
+  volume={33},
+  number={3},
+  pages={257--266},
+  year={2015},
+  month = 3,
+  publisher={Copernicus GmbH}
+}
+
 @article{oksavik2015scintillation,
   title={Scintillation and loss of signal lock from poleward moving auroral forms in the cusp ionosphere},
   author={Oksavik, Kjellmar and van der Meeren, Christer and Lorentzen, Dag Arne and Baddeley, LJ and Moen, J},
@@ -114,6 +305,18 @@
   publisher={IOP Publishing}
 }
 
+@article{pecseli2015spectral,
+  title={Spectral properties of electrostatic drift wave turbulence in the laboratory and the ionosphere},
+  author={P\'ecseli, H. L.},
+  journal={Annales Geophysicae},
+  volume={33},
+  number={7},
+  pages={875--900},
+  year={2015},
+  month = 7,
+  publisher={Copernicus GmbH}
+}
+
 @article{clausen2015electron,
   title={Electron density enhancements in the polar cap during periods of dayside reconnection},
   author={Clausen, Lasse Boy Novock and Moen, JI},
@@ -124,6 +327,18 @@
   year={2015},
   month = 5,
   publisher={Wiley Online Library}
+}
+
+@article{Sandholt2015transitions,
+  title={Transitions between states of magnetotail–ionosphere coupling and the role of solar wind dynamic pressure: the 25 July 2004 interplanetary CME case},
+  author={Sandholt, P. E. and Farrugia, C. J. and Denig, W. F.},
+  journal={Annales Geophysicae},
+  volume={33},
+  number={4},
+  pages={427--436},
+  year={2015},
+  month = 4,
+  publisher={Copernicus GmbH}
 }
 
 @article{tresvig2015miniaturized,
@@ -138,6 +353,98 @@
   publisher={IEEE}
 }
 
+@article{Bjoland2015IMF,
+  title={Interplanetary magnetic field and solar cycle dependence of Northern Hemisphere F region joule heating},
+  author={Bjoland, L. M. and Chen, X. and Jin, Y. and Reimer, A. S. and Skjæveland, Å. and Wessel, M. R. and Burchill, J. K. and Clausen, L. B. N. and Haaland, S. E. and McWilliams, K. A.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={2},
+  pages={1478--1487},
+  year={2015},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@article{pecseli2015low,
+  title={Low frequency electrostatic waves propagating in plasmas with parameters varying along magnetic field lines},
+  author={P{\'e}cseli, HL},
+  journal={Plasma Sources Science and Technology},
+  volume={25},
+  number={1},
+  pages={015010},
+  year={2015},
+  month = 12,
+  publisher={IOP Publishing}
+}
+
+@article{miloch2015simulationsofFs,
+  title={Simulations of Several Finite-sized Objects in Plasma},
+  author={W.J. Miloch},
+  journal={Procedia Computer Science},
+  volume={51},
+  pages={1282--1291},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{Yaroshenko2015pic,
+  title={Particle-in-cell simulation of spacecraft/plasma interactions in the vicinity of Enceladus},
+  author={V.V. Yaroshenko and W.J. Miloch and H. Lühr},
+  journal={Icarus},
+  volume={257},
+  pages={1--8},
+  year={2015},
+  month = 4,
+  publisher={Elsevier}
+}
+
+@article{Bjoland2015imf,
+  title={Interplanetary magnetic field and solar cycle dependence of Northern Hemisphere F region joule heating},
+  author={Bjoland, L. M. and Chen, X. and Jin, Y. and Reimer, A. S. and Skjæveland, Å. and Wessel, M. R. and Burchill, J. K. and Clausen, L. B. N. and Haaland, S. E. and McWilliams, K. A.},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={2},
+  pages={1478--1487},
+  year={2015},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@article{Goodwin2015swarm,
+  title={Swarm in situ observations of F region polar cap patches created by cusp precipitation},
+  author={Goodwin, L. V. and Iserhienrhien, B. and Miles, D. M. and Patra, S. and van der Meeren, C. and Buchert, S. C. and Burchill, J. K. and Clausen, L. B. N. and Knudsen, D. J. and McWilliams, K. A. and Moen, J.},
+  journal={Geophysical Research Letters},
+  volume={42},
+  number={4},
+  pages={996--1003},
+  year={2015},
+  month = 1,
+  publisher={Wiley Online Library}
+}
+
+@article{Horky2015numerical,
+  title={Numerical study on the stability of weakly collisional plasma in E×B fields},
+  author={Horký, M. and Miloch, W. J.},
+  journal={Physics of Plasmas},
+  volume={22},
+  number={2},
+  pages={022109},
+  year={2015},
+  month = 2,
+  publisher={AIP Publishing}
+}
+
+@article{Spicher2015observation,
+  title={Observation of polar cap patches and calculation of gradient drift instability growth times: A Swarm case study},
+  author={Spicher, A. and Cameron, T. and Grono, E. M. and Yakymenko, K. N. and Buchert, S. C. and Clausen, L. B. N. and Knudsen, D. J. and McWilliams, K. A. and Moen, J. I.},
+  journal={Geophysical Research Letters},
+  volume={42},
+  number={2},
+  pages={201--206},
+  year={2015},
+  month = 12,
+  publisher={Wiley Online Library}
+}
 
 @article{mortensen2016high,
   title={High performance Python for direct numerical simulations of turbulent flows},
@@ -437,18 +744,6 @@
   publisher={EDP Sciences}
 }
 
-@article{pecseli2015low,
-  title={Low frequency electrostatic waves propagating in plasmas with parameters varying along magnetic field lines},
-  author={P{\'e}cseli, HL},
-  journal={Plasma Sources Science and Technology},
-  volume={25},
-  number={1},
-  pages={015010},
-  year={2015},
-  month = 12,
-  publisher={IOP Publishing}
-}
-
 @article{miloch2017wake,
   title={Wake potential of a dust particle in magnetised plasmas},
   author={Miloch, Wojciech Jacek and Darian, Diako and Mortensen, Mikael},
@@ -636,75 +931,138 @@
   publisher={EDP Sciences}
 }
 
-@article{sinevich2022small,
-  title={Small-Scale Irregularities Within Polarization Jet/SAID During Geomagnetic Activity},
-  author={Sinevich, AA and Chernyshov, AA and Chugunin, DV and Oinats, AV and Clausen, LBN and Miloch, WJ and Nishitani, N and Mogilevsky, MM},
-  journal={Geophysical Research Letters},
-  volume={49},
-  number={8},
-  pages={e2021GL097107},
-  year={2022},
-  month = 4,
-  publisher={Wiley Online Library}
-}
 
-@article{kotova2022interhemispheric,
-  title={Interhemispheric variability of the electron density and derived parameters by the Swarm satellites during different solar activity},
-  author={Kotova, Daria and Jin, Yaqi and Miloch, Wojciech},
-  journal={Journal of Space Weather and Space Climate},
-  volume={12},
-  pages={12},
-  year={2022},
-  month = 4,
-  publisher={EDP Sciences}
-}
 
-@article{kjolerbakken2022numerical,
-  title={Numerical Study of Non-Linear Effects for a Swept Bias Langmuir Probe},
-  author={Kj{\o}lerbakken, Kai Morgan and Miloch, Wojciech J and Martinsen, {\O}rjan Gr{\o}ttem and Pabst, Oliver and R{\o}ed, Ketil},
+
+
+
+
+
+@article{usui2019numerical,
+  title={Numerical study of plasma depletion region in a satellite wake},
+  author={Usui, Hideyuki and Miyake, Yohei and Miloch, Wojciech J and Ito, Keisuke},
   journal={IEEE Transactions on Plasma Science},
-  volume={50},
-  number={5},
-  pages={1237--1245},
-  year={2022},
-  month = 4,
+  volume={47},
+  number={8},
+  pages={3717--3723},
+  year={2019},
+  month = 6,
   publisher={IEEE}
 }
 
-@article{belakhovsky2022dayside,
-  title={Dayside Scintillations of GPS Signals According to the Observations on the Svalbard Archipelago},
-  author={Belakhovsky, VB and Jin, Y and Miloch, W},
-  journal={Bulletin of the Russian Academy of Sciences: Physics},
-  volume={86},
-  number={3},
-  pages={348--353},
-  year={2022},
-  month = 4,
+@article{jin2019simultaneous,
+  title={Simultaneous rocket and scintillation observations of plasma irregularities associated with a reversed flow event in the cusp ionosphere},
+  author={Jin, Yaqi and Moen, J{\o}ran I and Spicher, Andres and Oksavik, Kjellmar and Miloch, Wojciech J and Clausen, Lasse BN and Po{\.z}oga, Mariusz and Saito, Yoshifumi},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={124},
+  number={8},
+  pages={7098--7111},
+  year={2019},
+  month = 8,
+  publisher={Wiley Online Library}
+}
+
+@article{zakharov2020influence,
+  title={Influence of the Ionosphere on the Parameters of the GPS Navigation Signals during a Geomagnetic Substorm},
+  author={Zakharov, VI and Chernyshov, AA and Miloch, W and Jin, Y},
+  journal={Geomagnetism and Aeronomy},
+  volume={60},
+  number={6},
+  pages={754--767},
+  year={2020},
+  month = 12,
   publisher={Springer}
 }
 
-@article{brask2022electron,
-  title={Electron-neutral collisions effects on Langmuir probe in the lower E-region ionosphere},
-  author={Brask, SM and Marholm, S and Di Mare, F and Adhikari, S and Spicher, A and Takahashi, T and Miloch, WJ},
-  journal={Physics of Plasmas},
-  volume={29},
-  number={3},
-  pages={033511},
-  year={2022},
-  month = 3,
-  publisher={AIP Publishing LLC}
+@incollection{belakhovsky2020influencehigh,
+  title={Influence of different ionospheric disturbances on the GPS scintillations at high latitudes},
+  author={Belakhovsky, VB and Jin, Y and Miloch, WJ},
+  booktitle={Problems of Geocosmos--2018},
+  pages={281--287},
+  year={2020},
+  month = 7,
+  publisher={Springer}
 }
 
-@article{jao2022wake,
-  title={Wake formation behind Langmuir probes in ionospheric plasmas},
-  author={Jao, Chun-Sung and Marholm, Sigvald and Spicher, Andres and Miloch, Wojciech J},
-  journal={Advances in Space Research},
-  volume={69},
+@inproceedings{belakhovsky2020influence,
+  title={Influence of the substorm precipitations and polar cap patches on the GPS signals at polar latitudes},
+  author={Belakhovsky, Vladimir B and Jin, Yaqi and Miloch, Wojciech J and Koustov, Alexander V and Reimer, Ashton},
+  booktitle={Atmosphere, Ionosphere, Safety},
+  pages={91--93},
+  year={2020},
+  month = 9
+}
+
+@article{miyake2020electron,
+  title={Electron Wing-Like Structures Formed at a Negatively Charged Spacecraft Moving in a Magnetized Plasma},
+  author={Miyake, Yohei and Miloch, Wojciech Jacek and Kjus, SH and P{\'e}cseli, Hans L},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={125},
   number={2},
-  pages={856--868},
-  year={2022},
-  month = 1,
-  publisher={Elsevier}
+  pages={e2019JA027379},
+  year={2020},
+  month = 12,
+  publisher={Wiley Online Library}
+}
+
+@article{chernyshov2020relationship,
+  title={Relationship between TEC jumps and auroral substorm in the high-latitude ionosphere},
+  author={Chernyshov, Alexander A and Miloch, Wojciech Jacek and Jin, Yaqi and Zakharov, Viktor I},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={1--13},
+  year={2020},
+  month = 4,
+  publisher={Nature Publishing Group}
+}
+
+@article{faehn2020two,
+  title={Two-Dimensional Reconstruction of Ionospheric Plasma Density Variations Using Swarm},
+  author={F{\ae}hn Follestad, A and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and van den IJssel, J and Haagmans, Roger},
+  journal={Space Weather},
+  volume={18},
+  number={6},
+  pages={e2019SW002406},
+  year={2020},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@article{jin2020ionospheric,
+  title={Ionospheric plasma irregularities based on in situ measurements from the Swarm satellites},
+  author={Jin, Yaqi and Xiong, Chao and Clausen, Lasse and Spicher, Andres and Kotova, Daria and Brask, Steffen and Kervalishvili, Guram and Stolle, Claudia and Miloch, Wojciech},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={125},
+  number={7},
+  pages={e2020JA028103},
+  year={2020},
+  month = 6,
+  publisher={Wiley Online Library}
+}
+
+@article{chernyshov2020situ,
+  title={In situ observations of ionospheric heating effects: first results from a joint SURA and NorSat-1 experiment},
+  author={Chernyshov, Alexander A and Chugunin, Dmitry V and Frolov, Vladimor L and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Mogilevsky, Mikhail M},
+  journal={Geophysical Research Letters},
+  volume={47},
+  number={13},
+  pages={e2020GL088462},
+  year={2020},
+  month = 6,
+  publisher={Wiley Online Library}
+}
+
+@article{marholm2020novel,
+  title={A Novel Method for Circuits of Perfect Electric Conductors in Unstructured Particle-in-Cell Plasma--Object Interaction Simulations},
+  author={Marholm, Sigvald and Darian, Diako and Mortensen, Mikael and Marchand, Richard and Miloch, Wojciech J},
+  journal={IEEE Transactions on Plasma Science},
+  volume={48},
+  number={8},
+  pages={2856--2872},
+  year={2020},
+  month = 7,
+  publisher={IEEE}
 }
 
 @article{monte2021method,
@@ -838,131 +1196,75 @@
   publisher={AIP Publishing LLC}
 }
 
-@article{zakharov2020influence,
-  title={Influence of the Ionosphere on the Parameters of the GPS Navigation Signals during a Geomagnetic Substorm},
-  author={Zakharov, VI and Chernyshov, AA and Miloch, W and Jin, Y},
-  journal={Geomagnetism and Aeronomy},
-  volume={60},
-  number={6},
-  pages={754--767},
-  year={2020},
-  month = 12,
-  publisher={Springer}
-}
-
-@incollection{belakhovsky2020influencehigh,
-  title={Influence of different ionospheric disturbances on the GPS scintillations at high latitudes},
-  author={Belakhovsky, VB and Jin, Y and Miloch, WJ},
-  booktitle={Problems of Geocosmos--2018},
-  pages={281--287},
-  year={2020},
-  month = 7,
-  publisher={Springer}
-}
-
-@inproceedings{belakhovsky2020influence,
-  title={Influence of the substorm precipitations and polar cap patches on the GPS signals at polar latitudes},
-  author={Belakhovsky, Vladimir B and Jin, Yaqi and Miloch, Wojciech J and Koustov, Alexander V and Reimer, Ashton},
-  booktitle={Atmosphere, Ionosphere, Safety},
-  pages={91--93},
-  year={2020},
-  month = 9
-}
-
-@article{miyake2020electron,
-  title={Electron Wing-Like Structures Formed at a Negatively Charged Spacecraft Moving in a Magnetized Plasma},
-  author={Miyake, Yohei and Miloch, Wojciech Jacek and Kjus, SH and P{\'e}cseli, Hans L},
-  journal={Journal of Geophysical Research: Space Physics},
-  volume={125},
-  number={2},
-  pages={e2019JA027379},
-  year={2020},
-  month = 12,
-  publisher={Wiley Online Library}
-}
-
-@article{chernyshov2020relationship,
-  title={Relationship between TEC jumps and auroral substorm in the high-latitude ionosphere},
-  author={Chernyshov, Alexander A and Miloch, Wojciech Jacek and Jin, Yaqi and Zakharov, Viktor I},
-  journal={Scientific reports},
-  volume={10},
-  number={1},
-  pages={1--13},
-  year={2020},
-  month = 4,
-  publisher={Nature Publishing Group}
-}
-
-@article{faehn2020two,
-  title={Two-Dimensional Reconstruction of Ionospheric Plasma Density Variations Using Swarm},
-  author={F{\ae}hn Follestad, A and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and van den IJssel, J and Haagmans, Roger},
-  journal={Space Weather},
-  volume={18},
-  number={6},
-  pages={e2019SW002406},
-  year={2020},
-  month = 5,
-  publisher={Wiley Online Library}
-}
-
-@article{jin2020ionospheric,
-  title={Ionospheric plasma irregularities based on in situ measurements from the Swarm satellites},
-  author={Jin, Yaqi and Xiong, Chao and Clausen, Lasse and Spicher, Andres and Kotova, Daria and Brask, Steffen and Kervalishvili, Guram and Stolle, Claudia and Miloch, Wojciech},
-  journal={Journal of Geophysical Research: Space Physics},
-  volume={125},
-  number={7},
-  pages={e2020JA028103},
-  year={2020},
-  month = 6,
-  publisher={Wiley Online Library}
-}
-
-@article{chernyshov2020situ,
-  title={In situ observations of ionospheric heating effects: first results from a joint SURA and NorSat-1 experiment},
-  author={Chernyshov, Alexander A and Chugunin, Dmitry V and Frolov, Vladimor L and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Mogilevsky, Mikhail M},
+@article{sinevich2022small,
+  title={Small-Scale Irregularities Within Polarization Jet/SAID During Geomagnetic Activity},
+  author={Sinevich, AA and Chernyshov, AA and Chugunin, DV and Oinats, AV and Clausen, LBN and Miloch, WJ and Nishitani, N and Mogilevsky, MM},
   journal={Geophysical Research Letters},
-  volume={47},
-  number={13},
-  pages={e2020GL088462},
-  year={2020},
-  month = 6,
+  volume={49},
+  number={8},
+  pages={e2021GL097107},
+  year={2022},
+  month = 4,
   publisher={Wiley Online Library}
 }
 
-@article{marholm2020novel,
-  title={A Novel Method for Circuits of Perfect Electric Conductors in Unstructured Particle-in-Cell Plasma--Object Interaction Simulations},
-  author={Marholm, Sigvald and Darian, Diako and Mortensen, Mikael and Marchand, Richard and Miloch, Wojciech J},
+@article{kotova2022interhemispheric,
+  title={Interhemispheric variability of the electron density and derived parameters by the Swarm satellites during different solar activity},
+  author={Kotova, Daria and Jin, Yaqi and Miloch, Wojciech},
+  journal={Journal of Space Weather and Space Climate},
+  volume={12},
+  pages={12},
+  year={2022},
+  month = 4,
+  publisher={EDP Sciences}
+}
+
+@article{kjolerbakken2022numerical,
+  title={Numerical Study of Non-Linear Effects for a Swept Bias Langmuir Probe},
+  author={Kj{\o}lerbakken, Kai Morgan and Miloch, Wojciech J and Martinsen, {\O}rjan Gr{\o}ttem and Pabst, Oliver and R{\o}ed, Ketil},
   journal={IEEE Transactions on Plasma Science},
-  volume={48},
-  number={8},
-  pages={2856--2872},
-  year={2020},
-  month = 7,
+  volume={50},
+  number={5},
+  pages={1237--1245},
+  year={2022},
+  month = 4,
   publisher={IEEE}
 }
 
-@article{usui2019numerical,
-  title={Numerical study of plasma depletion region in a satellite wake},
-  author={Usui, Hideyuki and Miyake, Yohei and Miloch, Wojciech J and Ito, Keisuke},
-  journal={IEEE Transactions on Plasma Science},
-  volume={47},
-  number={8},
-  pages={3717--3723},
-  year={2019},
-  month = 6,
-  publisher={IEEE}
+@article{belakhovsky2022dayside,
+  title={Dayside Scintillations of GPS Signals According to the Observations on the Svalbard Archipelago},
+  author={Belakhovsky, VB and Jin, Y and Miloch, W},
+  journal={Bulletin of the Russian Academy of Sciences: Physics},
+  volume={86},
+  number={3},
+  pages={348--353},
+  year={2022},
+  month = 4,
+  publisher={Springer}
 }
 
-@article{jin2019simultaneous,
-  title={Simultaneous rocket and scintillation observations of plasma irregularities associated with a reversed flow event in the cusp ionosphere},
-  author={Jin, Yaqi and Moen, J{\o}ran I and Spicher, Andres and Oksavik, Kjellmar and Miloch, Wojciech J and Clausen, Lasse BN and Po{\.z}oga, Mariusz and Saito, Yoshifumi},
-  journal={Journal of Geophysical Research: Space Physics},
-  volume={124},
-  number={8},
-  pages={7098--7111},
-  year={2019},
-  month = 8,
-  publisher={Wiley Online Library}
+@article{brask2022electron,
+  title={Electron-neutral collisions effects on Langmuir probe in the lower E-region ionosphere},
+  author={Brask, SM and Marholm, S and Di Mare, F and Adhikari, S and Spicher, A and Takahashi, T and Miloch, WJ},
+  journal={Physics of Plasmas},
+  volume={29},
+  number={3},
+  pages={033511},
+  year={2022},
+  month = 3,
+  publisher={AIP Publishing LLC}
+}
+
+@article{jao2022wake,
+  title={Wake formation behind Langmuir probes in ionospheric plasmas},
+  author={Jao, Chun-Sung and Marholm, Sigvald and Spicher, Andres and Miloch, Wojciech J},
+  journal={Advances in Space Research},
+  volume={69},
+  number={2},
+  pages={856--868},
+  year={2022},
+  month = 1,
+  publisher={Elsevier}
 }
 
 @article{sado2022transfer,
@@ -973,17 +1275,6 @@
   number={1},
   year={2022},
   month = 1,
-  publisher={Wiley Online Library}
-}
-
-@article{sado2023substorm,
-  title={Substorm onset prediction using machine learning classified auroral images},
-  author={Sado, Pascal and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Nickisch, Hannes},
-  journal={Space Weather},
-  volume={21},
-  number={2},
-  year={2023},
-  month = 2,
   publisher={Wiley Online Library}
 }
 
@@ -998,16 +1289,6 @@
   publisher={Wiley Online Library}
 }
 
-@article{song2023tandem,
-  title={Tandem Observations of Nighttime Mid-Latitude Topside Ionospheric Perturbations},
-  author={Song, Hosub and Park, Jaeheung and Jin, Yaqi and Otsuka, Yuichi and Buchert, Stephan and Lee, Jaejin and Yi, Yu},
-  journal={Space Weather},
-  volume={21},
-  number={2},
-  year={2023},
-  month = 2,
-  publisher={Wiley Online Library}
-}
 
 @article{jin2022climatology,
   title={Climatology and modeling of ionospheric irregularities over Greenland based on empirical orthogonal function method},
@@ -1093,6 +1374,28 @@
   year={2022},
   month = 11,
   publisher={EDP Sciences}
+}
+
+@article{sado2023substorm,
+  title={Substorm onset prediction using machine learning classified auroral images},
+  author={Sado, Pascal and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Nickisch, Hannes},
+  journal={Space Weather},
+  volume={21},
+  number={2},
+  year={2023},
+  month = 2,
+  publisher={Wiley Online Library}
+}
+
+@article{song2023tandem,
+  title={Tandem Observations of Nighttime Mid-Latitude Topside Ionospheric Perturbations},
+  author={Song, Hosub and Park, Jaeheung and Jin, Yaqi and Otsuka, Yuichi and Buchert, Stephan and Lee, Jaejin and Yi, Yu},
+  journal={Space Weather},
+  volume={21},
+  number={2},
+  year={2023},
+  month = 2,
+  publisher={Wiley Online Library}
 }
 
 @article{ivarsen2023algorithm,
