--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -119,7 +119,7 @@
 
 @article{jin2014scintillationeffects,
   title={GPS scintillation effects associated with polar cap patches and substorm auroral activity: direct comparison},
-  author={Jin, Yaqi, Moen, J\o{}ran I., and Miloch, Wojciech J.},
+  author={Jin Yaqi Moen J\o{}ran I. and Miloch, Wojciech J.},
   journal={Journal of Space Weather and Space Climate},
   volume={4},
   pages={A23},
@@ -128,9 +128,10 @@
   publisher={EDP Sciences}
 }
 
-@article{meeren2014GPSscintillation,
+
+@article{van2014gps,
   title={GPS scintillation and irregularities at the front of an ionization tongue in the nightside polar ionosphere},
-  author={van der Meeren, Christer and Oksavik, Kjellmar and Lorentzen, Dag and Moen, Jøran Idar and Romano, Vincenzo},
+  author={van der Meeren, Christer and Oksavik, Kjellmar and Lorentzen, Dag and Moen, J{\o}ran Idar and Romano, Vincenzo},
   journal={Journal of Geophysical Research: Space Physics},
   volume={119},
   number={10},
@@ -175,6 +176,7 @@
   month = 12,
   publisher={Copernicus GmbH}
 }
+
 
 @article{mortensen2015oasis,
   title={Oasis: a high-level/high-performance open source Navier--Stokes solver},
@@ -384,6 +386,7 @@
   volume={51},
   pages={1282--1291},
   year={2015},
+  month = 6,
   publisher={Elsevier}
 }
 
@@ -398,17 +401,6 @@
   publisher={Elsevier}
 }
 
-@article{Bjoland2015imf,
-  title={Interplanetary magnetic field and solar cycle dependence of Northern Hemisphere F region joule heating},
-  author={Bjoland, L. M. and Chen, X. and Jin, Y. and Reimer, A. S. and Skjæveland, Å. and Wessel, M. R. and Burchill, J. K. and Clausen, L. B. N. and Haaland, S. E. and McWilliams, K. A.},
-  journal={Journal of Geophysical Research: Space Physics},
-  volume={120},
-  number={2},
-  pages={1478--1487},
-  year={2015},
-  month = 5,
-  publisher={Wiley Online Library}
-}
 
 @article{Goodwin2015swarm,
   title={Swarm in situ observations of F region polar cap patches created by cusp precipitation},
@@ -932,12 +924,6 @@
 }
 
 
-
-
-
-
-
-
 @article{usui2019numerical,
   title={Numerical study of plasma depletion region in a satellite wake},
   author={Usui, Hideyuki and Miyake, Yohei and Miloch, Wojciech J and Ito, Keisuke},
@@ -1397,6 +1383,7 @@
   month = 2,
   publisher={Wiley Online Library}
 }
+
 
 @article{ivarsen2023algorithm,
   title={An Algorithm to Separate Ionospheric Turbulence Radar Echoes From Those of Meteor Trails in Large Data Sets},
