--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -119,7 +119,7 @@
 
 @article{jin2014scintillationeffects,
   title={GPS scintillation effects associated with polar cap patches and substorm auroral activity: direct comparison},
-  author={Jin, Yaqi, Moen, J\o{}ran I., and Miloch, Wojciech J.},
+  author={Jin, Yaqi and Moen, J{\o}ran I and Miloch, Wojciech J.},
   journal={Journal of Space Weather and Space Climate},
   volume={4},
   pages={A23},
